--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,15 @@
 <h1>All Tasks</h1>
 
-<% @tasks.each do |task| %>
-  <h3><%= task.id %>: <a href="/tasks/<%=  task.id%>"> <%= task.title %> </a></h3>
-<% end %>
+<table class="table table-hover" >
+  <tr>
+    <th>ID</th>
+    <th>Task</th>
+  </tr>
+
+  <% @tasks.each do |task| %>
+  <tr>
+    <td> <%= task.id %>: </td>
+    <td> <a href="/tasks/<%= task.id %>"><%= task.title %> </a></td>
+  </tr>
+  <% end %>
+</table>
